--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.3/dist/css/splide.min.css"
+    />
   </head>
   <body>
     <main>
@@ -53,179 +57,207 @@
           </div>
         </div>
       </section>
-      <section class="practice-areas">
+      <section class="practice-carousel">
         <div class="container">
-          <h2>Наші сфери діяльності</h2>
-          <div class="practice-grid">
-            <div class="practice-item">
-              <div class="icon">
-                <!-- Military Law Icon -->
-                <svg width="40" height="40" viewBox="0 0 24 24">
-                  <path
-                    d="M12 2l9 4v6c0 5-3.8 9.7-9 10-5.2-.3-9-5-9-10V6l9-4z"
-                    stroke="currentColor"
-                    fill="none"
-                    stroke-width="2"
-                  />
-                  <path
-                    d="M9 12l3 3 3-3"
-                    stroke="currentColor"
-                    fill="none"
-                    stroke-width="2"
-                  />
-                </svg>
-              </div>
-              <h3>Військове право</h3>
-              <p>
-                Захист прав військовослужбовців, мобілізованих та ветеранів.
-              </p>
+          <h2 class="section-title">Наші сфери діяльності</h2>
+          <div class="splide" id="practice-slider">
+            <div class="splide__arrows splide__arrows--top">
+              <button class="splide__arrow splide__arrow--prev">←</button>
+              <button class="splide__arrow splide__arrow--next">→</button>
             </div>
-            <div class="practice-item">
-              <div class="icon">
-                <!-- Civil Law Icon -->
-                <svg width="40" height="40" viewBox="0 0 24 24">
-                  <path
-                    d="M4 4h16v16H4z"
-                    stroke="currentColor"
-                    fill="none"
-                    stroke-width="2"
-                  />
-                  <path
-                    d="M8 4v16M16 4v16"
-                    stroke="currentColor"
-                    stroke-width="2"
-                  />
-                </svg>
-              </div>
-              <h3>Цивільне право</h3>
-              <p>Договори, майнові спори, захист прав споживачів.</p>
-            </div>
-            <div class="practice-item">
-              <div class="icon">
-                <!-- Criminal Law Icon -->
-                <svg width="40" height="40" viewBox="0 0 24 24">
-                  <circle
-                    cx="12"
-                    cy="7"
-                    r="4"
-                    stroke="currentColor"
-                    fill="none"
-                    stroke-width="2"
-                  />
-                  <path
-                    d="M4 22c2-6 14-6 16 0"
-                    stroke="currentColor"
-                    fill="none"
-                    stroke-width="2"
-                  />
-                </svg>
-              </div>
-              <h3>Кримінальне право</h3>
-              <p>Захист у кримінальних провадженнях на всіх етапах.</p>
-            </div>
-            <div class="practice-item">
-              <div class="icon">
-                <!-- Admin Icon -->
-                <svg width="40" height="40" viewBox="0 0 24 24">
-                  <circle
-                    cx="12"
-                    cy="6"
-                    r="3"
-                    stroke="currentColor"
-                    fill="none"
-                    stroke-width="2"
-                  />
-                  <path
-                    d="M4 22v-2a4 4 0 014-4h8a4 4 0 014 4v2"
-                    stroke="currentColor"
-                    fill="none"
-                    stroke-width="2"
-                  />
-                </svg>
-              </div>
-              <h3>Адміністративні правопорушення</h3>
-              <p>Оскарження штрафів, супровід у держорганах.</p>
-            </div>
-            <div class="practice-item">
-              <div class="icon">
-                <!-- Court Icon -->
-                <svg width="40" height="40" viewBox="0 0 24 24">
-                  <path
-                    d="M2 21h20M5 10h14M12 3l7 7H5l7-7z"
-                    stroke="currentColor"
-                    fill="none"
-                    stroke-width="2"
-                  />
-                  <path
-                    d="M8 10v11M16 10v11"
-                    stroke="currentColor"
-                    stroke-width="2"
-                  />
-                </svg>
-              </div>
-              <h3>Представництво в судах</h3>
-              <p>Юридичний супровід у судах усіх інстанцій.</p>
-            </div>
-            <div class="practice-item">
-              <div class="icon">
-                <!-- Enforcement Icon -->
-                <svg width="40" height="40" viewBox="0 0 24 24">
-                  <rect
-                    x="4"
-                    y="4"
-                    width="16"
-                    height="16"
-                    rx="2"
-                    stroke="currentColor"
-                    fill="none"
-                    stroke-width="2"
-                  />
-                  <path d="M8 12h8" stroke="currentColor" stroke-width="2" />
-                </svg>
-              </div>
-              <h3>Виконавче провадження</h3>
-              <p>Скасування арештів майна та оскарження постанов.</p>
-            </div>
-            <div class="practice-item">
-              <div class="icon">
-                <!-- Family Law Icon -->
-                <svg width="40" height="40" viewBox="0 0 24 24">
-                  <circle
-                    cx="8"
-                    cy="7"
-                    r="3"
-                    stroke="currentColor"
-                    fill="none"
-                    stroke-width="2"
-                  />
-                  <circle
-                    cx="16"
-                    cy="7"
-                    r="3"
-                    stroke="currentColor"
-                    fill="none"
-                    stroke-width="2"
-                  />
-                  <path
-                    d="M4 21c0-3 2-6 4-6s4 3 4 6"
-                    stroke="currentColor"
-                    fill="none"
-                    stroke-width="2"
-                  />
-                  <path
-                    d="M12 21c0-3 2-6 4-6s4 3 4 6"
-                    stroke="currentColor"
-                    fill="none"
-                    stroke-width="2"
-                  />
-                </svg>
-              </div>
-              <h3>Сімейне та спадкове право</h3>
-              <p>Поділ майна, спадкові питання, захист прав дітей.</p>
+            <div class="splide__track">
+              <ul class="splide__list">
+                <li class="splide__slide">
+                  <div class="practice-card">
+                    <div class="icon">
+                      <!-- Military Law Icon -->
+                      <svg width="40" height="40" viewBox="0 0 24 24">
+                        <path
+                          d="M12 2l9 4v6c0 5-3.8 9.7-9 10-5.2-.3-9-5-9-10V6l9-4z"
+                          stroke="currentColor"
+                          fill="none"
+                          stroke-width="2"
+                        />
+                        <path
+                          d="M9 12l3 3 3-3"
+                          stroke="currentColor"
+                          fill="none"
+                          stroke-width="2"
+                        />
+                      </svg>
+                    </div>
+                    <h3>Військове право</h3>
+                    <p>
+                      Захист прав військовослужбовців, мобілізованих та
+                      ветеранів.
+                    </p>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="practice-card">
+                    <div class="icon">
+                      <!-- Civil Law Icon -->
+                      <svg width="40" height="40" viewBox="0 0 24 24">
+                        <path
+                          d="M4 4h16v16H4z"
+                          stroke="currentColor"
+                          fill="none"
+                          stroke-width="2"
+                        />
+                        <path
+                          d="M8 4v16M16 4v16"
+                          stroke="currentColor"
+                          stroke-width="2"
+                        />
+                      </svg>
+                    </div>
+                    <h3>Цивільне право</h3>
+                    <p>Договори, майнові спори, захист прав споживачів.</p>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="practice-card">
+                    <div class="icon">
+                      <!-- Criminal Law Icon -->
+                      <svg width="40" height="40" viewBox="0 0 24 24">
+                        <circle
+                          cx="12"
+                          cy="7"
+                          r="4"
+                          stroke="currentColor"
+                          fill="none"
+                          stroke-width="2"
+                        />
+                        <path
+                          d="M4 22c2-6 14-6 16 0"
+                          stroke="currentColor"
+                          fill="none"
+                          stroke-width="2"
+                        />
+                      </svg>
+                    </div>
+                    <h3>Кримінальне право</h3>
+                    <p>Захист у кримінальних провадженнях на всіх етапах.</p>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="practice-card">
+                    <div class="icon">
+                      <!-- Admin Icon -->
+                      <svg width="40" height="40" viewBox="0 0 24 24">
+                        <circle
+                          cx="12"
+                          cy="6"
+                          r="3"
+                          stroke="currentColor"
+                          fill="none"
+                          stroke-width="2"
+                        />
+                        <path
+                          d="M4 22v-2a4 4 0 014-4h8a4 4 0 014 4v2"
+                          stroke="currentColor"
+                          fill="none"
+                          stroke-width="2"
+                        />
+                      </svg>
+                    </div>
+                    <h3>Адміністративні правопорушення</h3>
+                    <p>Оскарження штрафів, супровід у держорганах.</p>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="practice-card">
+                    <div class="icon">
+                      <!-- Court Icon -->
+                      <svg width="40" height="40" viewBox="0 0 24 24">
+                        <path
+                          d="M2 21h20M5 10h14M12 3l7 7H5l7-7z"
+                          stroke="currentColor"
+                          fill="none"
+                          stroke-width="2"
+                        />
+                        <path
+                          d="M8 10v11M16 10v11"
+                          stroke="currentColor"
+                          stroke-width="2"
+                        />
+                      </svg>
+                    </div>
+                    <h3>Представництво в судах</h3>
+                    <p>Юридичний супровід у судах усіх інстанцій.</p>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="practice-card">
+                    <div class="icon">
+                      <!-- Enforcement Icon -->
+                      <svg width="40" height="40" viewBox="0 0 24 24">
+                        <rect
+                          x="4"
+                          y="4"
+                          width="16"
+                          height="16"
+                          rx="2"
+                          stroke="currentColor"
+                          fill="none"
+                          stroke-width="2"
+                        />
+                        <path
+                          d="M8 12h8"
+                          stroke="currentColor"
+                          stroke-width="2"
+                        />
+                      </svg>
+                    </div>
+                    <h3>Виконавче провадження</h3>
+                    <p>Скасування арештів майна та оскарження постанов.</p>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="practice-card">
+                    <div class="icon">
+                      <!-- Family Law Icon -->
+                      <svg width="40" height="40" viewBox="0 0 24 24">
+                        <circle
+                          cx="8"
+                          cy="7"
+                          r="3"
+                          stroke="currentColor"
+                          fill="none"
+                          stroke-width="2"
+                        />
+                        <circle
+                          cx="16"
+                          cy="7"
+                          r="3"
+                          stroke="currentColor"
+                          fill="none"
+                          stroke-width="2"
+                        />
+                        <path
+                          d="M4 21c0-3 2-6 4-6s4 3 4 6"
+                          stroke="currentColor"
+                          fill="none"
+                          stroke-width="2"
+                        />
+                        <path
+                          d="M12 21c0-3 2-6 4-6s4 3 4 6"
+                          stroke="currentColor"
+                          fill="none"
+                          stroke-width="2"
+                        />
+                      </svg>
+                    </div>
+                    <h3>Сімейне та спадкове право</h3>
+                    <p>Поділ майна, спадкові питання, захист прав дітей.</p>
+                  </div>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
       </section>
+
       <section class="team-section">
         <div class="container">
           <h2>Наша команда юристів</h2>
@@ -315,5 +347,6 @@
     </main>
     <footer></footer>
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.3/dist/js/splide.min.js"></script>
   </body>
 </html>
