change root color

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ПравоБлаго - Юридична допомога</title>
+    <title>Еволюція - Юридична компанія</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,12 +13,12 @@
   </head>
   <body>
     <main>
-      <<!-- Header -->
+      <!-- Header -->
     <header class="header" id="header">
         <div class="container">
             <div class="header-content">
                 <div class="logo" onclick="scrollToSection('hero')">
-                    <span class="logo-pravo">Право</span><span class="logo-blago">Благо</span>
+                    <span class="logo-pravo">Еволюція</span>
                 </div>
                 <nav class="nav-desktop">
                     <button onclick="scrollToSection('hero')" class="nav-link">Головна</button>
@@ -65,13 +65,13 @@
             <span class="hero-title-gold">різних галузях права</span>
           </h1>
           <p class="hero-description">
-            Ми надаємо професійні юридичні послуги для захисту ваших прав та інтересів.
-            Наша команда досвідчених адвокатів готова допомогти вам у вирішенні будь-яких правових питань.
+            Наша команда об'єднує досвідчених юристів-ветеранів, які щодня допомогають клієнтам захищати свої права з професіоналізмом і гідностю.
+          
           </p>
           <div class="hero-free-badge">
-            <svg class="icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <!-- <svg class="icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <path d="M6 9l6 6 6-6" />
-            </svg>
+            </svg> -->
             <span>Перша консультація безкоштовно</span>
           </div>
           <div class="hero-buttons">
@@ -97,6 +97,16 @@
             </p>
           </div>
           <div class="services-grid">
+            <div class="service-card">
+              <div class="service-icon">
+                <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+                  <polygon
+                    points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2" />
+                </svg>
+              </div>
+              <h3 class="service-title">Військове право</h3>
+              <p class="service-description">Захист прав військовослужбовців, мобілізованих та ветеранів.</p>
+            </div>
             <div class="service-card">
               <div class="service-icon">
                 <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
@@ -159,16 +169,7 @@
               <h3 class="service-title">Сімейне та спадкове право</h3>
               <p class="service-description">Поділ майна, спадкові питання, захист прав дітей.</p>
             </div>
-            <div class="service-card">
-              <div class="service-icon">
-                <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                  <polygon
-                    points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2" />
-                </svg>
-              </div>
-              <h3 class="service-title">Військове право</h3>
-              <p class="service-description">Захист прав військовослужбовців, мобілізованих та ветеранів.</p>
-            </div>
+            
           </div>
           <div class="additional-services">
             <h3 class="additional-services-title">Додаткові послуги</h3>
@@ -255,7 +256,7 @@
               </div>
               <div class="team-info">
                 <h3 class="team-name">Марія Іваніщева</h3>
-                <p class="team-position">Юрист</p>
+                <p class="team-position">Адвокат</p>
                 <!-- <p class="team-specialty">Кримінальне та військове право</p> -->
                 <div class="team-social">
                   <a href="#" class="social-link">
@@ -398,8 +399,7 @@
                 </div>
                 <div>
                   <h4>Телефон</h4>
-                  <p>+380 XX XXX XX XX</p>
-                  <p>+380 XX XXX XX XX</p>
+                  <a href="tel:+380636872293">+38 (063) 687 22 93</a>
                 </div>
               </div>
               <div class="contact-info-card">
@@ -411,8 +411,7 @@
                 </div>
                 <div>
                   <h4>Email</h4>
-                  <p>info@pravoblago.ua</p>
-                  <p>consultation@pravoblago.ua</p>
+                  <a href="mailto:Advokat.ivanisheva@ukr.net">Advokat.ivanisheva@ukr.net</a>
                 </div>
               </div>
               <div class="contact-info-card">
@@ -424,8 +423,8 @@
                 </div>
                 <div>
                   <h4>Адреса</h4>
-                  <p>м. Київ, вул. Хрещатик, 1</p>
-                  <p>офіс 100</p>
+                  <p>м. Івано-Франківськ, вул. Шевченко, 9</p>
+                  <p>76018</p>
                 </div>
               </div>
               <div class="contact-info-card">
@@ -453,7 +452,7 @@
           <div class="footer-grid">
             <div class="footer-brand">
               <div class="logo">
-                <span class="logo-pravo">Право</span><span class="logo-blago">Благо</span>
+                <span class="logo-pravo">Еволюція</span>
               </div>
               <p class="footer-description">
                 Ваш надійний партнер у вирішенні юридичних питань. Професійний захист ваших прав та інтересів.
@@ -506,8 +505,7 @@
                     d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
                 </svg>
                 <div>
-                  <p>+380 XX XXX XX XX</p>
-                  <p>+380 XX XXX XX XX</p>
+                  <a href="tel:+380636872293">+38 (063) 687 22 93</a>
                 </div>
               </div>
               <div class="footer-contact-item">
@@ -515,12 +513,12 @@
                   <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" />
                   <polyline points="22,6 12,13 2,6" />
                 </svg>
-                <p>info@pravoblago.ua</p>
+                <a href="mailto:Advokat.ivanisheva@ukr.net">Advokat.ivanisheva@ukr.net</a>
               </div>
             </div>
           </div>
           <div class="footer-bottom">
-            <p>© 2025 ПравоБлаго. Всі права захищені.</p>
+            <p>© 2025 АО Юридична компанія "Еволюція". Всі права захищені.</p>
             <div class="footer-bottom-links">
               <button>Політика конфіденційності</button>
               <button>Умови використання</button>
