--- a/index.html
+++ b/index.html
@@ -281,16 +281,14 @@
                 </div>
               </div>
             </div>
-            <!-- <div class="team-card">
+           <div class="team-card">
               <div class="team-avatar">
-                <div class="team-avatar-placeholder">
-                  <span>М</span>
-                </div>
+                <img src="./img/lawyer2.JPG" alt="" class="team-photo" />
               </div>
               <div class="team-info">
-                <h3 class="team-name">Максим Коваленко</h3>
-                <p class="team-position">Партнер</p>
-                <p class="team-specialty">Цивільне та сімейне право</p>
+                <h3 class="team-name">Василь Клименко</h3>
+                <p class="team-position">Військовий юрист</p>
+                <!-- <p class="team-specialty">Кримінальне та військове право</p> -->
                 <div class="team-social">
                   <a href="#" class="social-link">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -314,7 +312,7 @@
                 </div>
               </div>
             </div>
-            <div class="team-card">
+            <!-- <div class="team-card">
               <div class="team-avatar">
                 <div class="team-avatar-placeholder">
                   <span>І</span>
@@ -346,7 +344,7 @@
                   </a>
                 </div>
               </div>
-            </div> -->
+            </div>  -->
           </div>
         </div>
       </section>
